# tosviewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: application.h  ies_formats.h  ipf_formats.h  shared_formats.h  tosviewer.h  xac_formats.h  xpm_formats.h  xsm_formats.h
source/: tosviewer.cpp
